--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,4 +11,4 @@ jobs:
               with:
                   version: latest
                   platform: x64
-            - run: make && ./out/dom samples/basic.dm
+            - run: make
